// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBelongsToManyRelation: Category - posts 1`] = `
Array [
  Array [
    Object {
      "className": "Post",
      "foreignPivotKey": "A",
      "name": "posts",
      "pivotTable": "_CategoryToPost",
      "relatedPivotKey": "B",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\Post",
  },
]
`;

exports[`getBelongsToManyRelation: EagerLoadA - related 1`] = `false`;

exports[`getBelongsToManyRelation: EagerLoadB - related 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyA - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyB",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot",
      "relatedKey": "id",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyA2 - explicit_many_to_many_b2 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyB2",
      "foreignPivotKey": "explicit_many_to_many_a2_id",
      "name": "explicit_many_to_many_b2",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot2",
      "relatedKey": "id",
      "relatedPivotKey": "explicit_many_to_many_b2_id",
      "using": "ExplicitManyToManyPivot2",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB2",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot2",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyA3 - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyB3",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "otherIdA",
      "pivotTable": "ExplicitManyToManyPivot3",
      "relatedKey": "otherIdB",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot3",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB3",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot3",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyA4 - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyB4",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "otherIdA",
      "pivotTable": "explicit_many_to_many_a4_explicit_many_to_many_b4",
      "relatedKey": "otherIdB",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot4",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB4",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot4",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyA5 - hasOne 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyA5 - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyB5",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot5",
      "relatedKey": "id",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot5",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB5",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot5",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyA6 - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyB6",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "key",
      "pivotTable": "ExplicitManyToManyPivot6",
      "relatedKey": "key",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot6",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB6",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot6",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyA7 - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyB7",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "key",
      "pivotTable": "ExplicitManyToManyPivot7",
      "relatedKey": "key",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot7",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB7",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot7",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyB - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyA",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot",
      "relatedKey": "id",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyB2 - explicit_many_to_many_a2 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyA2",
      "foreignPivotKey": "explicit_many_to_many_b2_id",
      "name": "explicit_many_to_many_a2",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot2",
      "relatedKey": "id",
      "relatedPivotKey": "explicit_many_to_many_a2_id",
      "using": "ExplicitManyToManyPivot2",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA2",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot2",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyB3 - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyA3",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "otherIdB",
      "pivotTable": "ExplicitManyToManyPivot3",
      "relatedKey": "otherIdA",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot3",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA3",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot3",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyB4 - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyA4",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "otherIdB",
      "pivotTable": "explicit_many_to_many_a4_explicit_many_to_many_b4",
      "relatedKey": "otherIdA",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot4",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA4",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot4",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyB5 - pivot 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyB5 - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyA5",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot5",
      "relatedKey": "id",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot5",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA5",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot5",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyB6 - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyA6",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "key",
      "pivotTable": "ExplicitManyToManyPivot6",
      "relatedKey": "key",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot6",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA6",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot6",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyB7 - related 1`] = `
Array [
  Array [
    Object {
      "className": "ExplicitManyToManyA7",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "key",
      "pivotTable": "ExplicitManyToManyPivot7",
      "relatedKey": "key",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot7",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA7",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot7",
  },
]
`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot - A 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot - B 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot2 - explicit_many_to_many_a2 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot2 - explicit_many_to_many_b2 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot3 - A 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot3 - B 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot4 - A 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot4 - B 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot5 - A 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot5 - A2 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot5 - B 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot5 - B2 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot6 - A 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot6 - B 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot7 - A 1`] = `false`;

exports[`getBelongsToManyRelation: ExplicitManyToManyPivot7 - B 1`] = `false`;

exports[`getBelongsToManyRelation: ImplicitManyToManyA - related 1`] = `
Array [
  Array [
    Object {
      "className": "ImplicitManyToManyB",
      "foreignPivotKey": "A",
      "name": "related",
      "pivotTable": "_ImplicitManyToManyAToImplicitManyToManyB",
      "relatedPivotKey": "B",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ImplicitManyToManyB",
  },
]
`;

exports[`getBelongsToManyRelation: ImplicitManyToManyB - related 1`] = `
Array [
  Array [
    Object {
      "className": "ImplicitManyToManyA",
      "foreignPivotKey": "B",
      "name": "related",
      "pivotTable": "_ImplicitManyToManyAToImplicitManyToManyB",
      "relatedPivotKey": "A",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\ImplicitManyToManyA",
  },
]
`;

exports[`getBelongsToManyRelation: OneToManyA - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToManyA2 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToManyA3 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToManyA4 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToManyB - one_to_one_a2 1`] = `false`;

exports[`getBelongsToManyRelation: OneToManyB2 - one_to_many_a2 1`] = `false`;

exports[`getBelongsToManyRelation: OneToManyB3 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToManyB4 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToOneA - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToOneA2 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToOneA3 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToOneA4 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToOneA5 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToOneB - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToOneB2 - one_to_one_a2 1`] = `false`;

exports[`getBelongsToManyRelation: OneToOneB3 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToOneB4 - related 1`] = `false`;

exports[`getBelongsToManyRelation: OneToOneB5 - related 1`] = `false`;

exports[`getBelongsToManyRelation: Post - author 1`] = `false`;

exports[`getBelongsToManyRelation: Post - categories 1`] = `
Array [
  Array [
    Object {
      "className": "Category",
      "foreignPivotKey": "B",
      "name": "categories",
      "pivotTable": "_CategoryToPost",
      "relatedPivotKey": "A",
    },
  ],
  Set {
    "App\\\\Models\\\\Prisma\\\\Category",
  },
]
`;

exports[`getBelongsToManyRelation: Profile - user 1`] = `false`;

exports[`getBelongsToManyRelation: SelfRelation - child 1`] = `false`;

exports[`getBelongsToManyRelation: SelfRelation - parent 1`] = `false`;

exports[`getBelongsToManyRelation: TouchingA - related 1`] = `false`;

exports[`getBelongsToManyRelation: TouchingB - related 1`] = `false`;

exports[`getBelongsToManyRelation: User - posts 1`] = `false`;

exports[`getBelongsToManyRelation: User - profile 1`] = `false`;

exports[`getBelongsToRelation: Category - posts 1`] = `false`;

exports[`getBelongsToRelation: EagerLoadA - related 1`] = `false`;

exports[`getBelongsToRelation: EagerLoadB - related 1`] = `
Array [
  Object {
    "className": "EagerLoadA",
    "foreignKey": "relatedId",
    "name": "related",
    "nullable": false,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\EagerLoadA",
  },
]
`;

exports[`getBelongsToRelation: ExplicitManyToManyA - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyA2 - explicit_many_to_many_b2 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyA3 - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyA4 - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyA5 - hasOne 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyA5 - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyA6 - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyA7 - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyB - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyB2 - explicit_many_to_many_a2 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyB3 - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyB4 - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyB5 - pivot 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot5",
    "foreignKey": "pivot_id",
    "name": "pivot",
    "nullable": false,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot5",
  },
]
`;

exports[`getBelongsToRelation: ExplicitManyToManyB5 - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyB6 - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyB7 - related 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot - A 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot - B 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot2 - explicit_many_to_many_a2 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot2 - explicit_many_to_many_b2 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot3 - A 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot3 - B 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot4 - A 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot4 - B 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot5 - A 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot5 - A2 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot5 - B 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot5 - B2 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot6 - A 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot6 - B 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot7 - A 1`] = `false`;

exports[`getBelongsToRelation: ExplicitManyToManyPivot7 - B 1`] = `false`;

exports[`getBelongsToRelation: ImplicitManyToManyA - related 1`] = `false`;

exports[`getBelongsToRelation: ImplicitManyToManyB - related 1`] = `false`;

exports[`getBelongsToRelation: OneToManyA - related 1`] = `false`;

exports[`getBelongsToRelation: OneToManyA2 - related 1`] = `false`;

exports[`getBelongsToRelation: OneToManyA3 - related 1`] = `false`;

exports[`getBelongsToRelation: OneToManyA4 - related 1`] = `false`;

exports[`getBelongsToRelation: OneToManyB - one_to_one_a2 1`] = `
Array [
  Object {
    "className": "OneToManyA",
    "foreignKey": "relatedId",
    "name": "one_to_one_a2",
    "nullable": false,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyA",
  },
]
`;

exports[`getBelongsToRelation: OneToManyB2 - one_to_many_a2 1`] = `
Array [
  Object {
    "className": "OneToManyA2",
    "foreignKey": "one_to_many_a2_id",
    "name": "one_to_many_a2",
    "nullable": false,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyA2",
  },
]
`;

exports[`getBelongsToRelation: OneToManyB3 - related 1`] = `
Array [
  Object {
    "className": "OneToManyA3",
    "foreignKey": "relatedId",
    "name": "related",
    "nullable": false,
    "ownerKey": "otherId",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyA3",
  },
]
`;

exports[`getBelongsToRelation: OneToManyB4 - related 1`] = `
Array [
  Object {
    "className": "OneToManyA4",
    "foreignKey": "main_id",
    "name": "related",
    "nullable": false,
    "ownerKey": "main_id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyA4",
  },
]
`;

exports[`getBelongsToRelation: OneToOneA - related 1`] = `false`;

exports[`getBelongsToRelation: OneToOneA2 - related 1`] = `false`;

exports[`getBelongsToRelation: OneToOneA3 - related 1`] = `false`;

exports[`getBelongsToRelation: OneToOneA4 - related 1`] = `false`;

exports[`getBelongsToRelation: OneToOneA5 - related 1`] = `false`;

exports[`getBelongsToRelation: OneToOneB - related 1`] = `
Array [
  Object {
    "className": "OneToOneA",
    "foreignKey": "relatedId",
    "name": "related",
    "nullable": false,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneA",
  },
]
`;

exports[`getBelongsToRelation: OneToOneB2 - one_to_one_a2 1`] = `
Array [
  Object {
    "className": "OneToOneA2",
    "foreignKey": "one_to_one_a2_id",
    "name": "one_to_one_a2",
    "nullable": false,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneA2",
  },
]
`;

exports[`getBelongsToRelation: OneToOneB3 - related 1`] = `
Array [
  Object {
    "className": "OneToOneA3",
    "foreignKey": "related_id",
    "name": "related",
    "nullable": false,
    "ownerKey": "otherId",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneA3",
  },
]
`;

exports[`getBelongsToRelation: OneToOneB4 - related 1`] = `
Array [
  Object {
    "className": "OneToOneA4",
    "foreignKey": "relatedId",
    "name": "related",
    "nullable": true,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneA4",
  },
]
`;

exports[`getBelongsToRelation: OneToOneB5 - related 1`] = `
Array [
  Object {
    "className": "OneToOneA5",
    "foreignKey": "relatedId",
    "name": "related",
    "nullable": true,
    "ownerKey": "main_id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneA5",
  },
]
`;

exports[`getBelongsToRelation: Post - author 1`] = `
Array [
  Object {
    "className": "User",
    "foreignKey": "authorId",
    "name": "author",
    "nullable": false,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\User",
  },
]
`;

exports[`getBelongsToRelation: Post - categories 1`] = `false`;

exports[`getBelongsToRelation: Profile - user 1`] = `
Array [
  Object {
    "className": "User",
    "foreignKey": "userId",
    "name": "user",
    "nullable": false,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\User",
  },
]
`;

exports[`getBelongsToRelation: SelfRelation - child 1`] = `false`;

exports[`getBelongsToRelation: SelfRelation - parent 1`] = `
Array [
  Object {
    "className": "SelfRelation",
    "foreignKey": "relatedId",
    "name": "parent",
    "nullable": false,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\SelfRelation",
  },
]
`;

exports[`getBelongsToRelation: TouchingA - related 1`] = `false`;

exports[`getBelongsToRelation: TouchingB - related 1`] = `
Array [
  Object {
    "className": "TouchingA",
    "foreignKey": "relatedId",
    "name": "related",
    "nullable": false,
    "ownerKey": "id",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\TouchingA",
  },
]
`;

exports[`getBelongsToRelation: User - posts 1`] = `false`;

exports[`getBelongsToRelation: User - profile 1`] = `false`;

exports[`getHasManyRelation: Category - posts 1`] = `false`;

exports[`getHasManyRelation: EagerLoadA - related 1`] = `false`;

exports[`getHasManyRelation: EagerLoadB - related 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyA - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot",
    "foreignKey": "A_id",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyA2 - explicit_many_to_many_b2 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot2",
    "foreignKey": "explicit_many_to_many_a2_id",
    "localKey": "id",
    "name": "explicit_many_to_many_b2",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot2",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyA3 - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot3",
    "foreignKey": "A_id",
    "localKey": "otherIdA",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot3",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyA4 - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot4",
    "foreignKey": "A_id",
    "localKey": "otherIdA",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot4",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyA5 - hasOne 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyA5 - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot5",
    "foreignKey": "A_id",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot5",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyA6 - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot6",
    "foreignKey": "A_id",
    "localKey": "key",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot6",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyA7 - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot7",
    "foreignKey": "A_id",
    "localKey": "key",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot7",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyB - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot",
    "foreignKey": "B_id",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyB2 - explicit_many_to_many_a2 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot2",
    "foreignKey": "explicit_many_to_many_b2_id",
    "localKey": "id",
    "name": "explicit_many_to_many_a2",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot2",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyB3 - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot3",
    "foreignKey": "B_id",
    "localKey": "otherIdB",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot3",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyB4 - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot4",
    "foreignKey": "B_id",
    "localKey": "otherIdB",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot4",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyB5 - pivot 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyB5 - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot5",
    "foreignKey": "B_id",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot5",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyB6 - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot6",
    "foreignKey": "B_id",
    "localKey": "key",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot6",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyB7 - related 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot7",
    "foreignKey": "B_id",
    "localKey": "key",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot7",
  },
]
`;

exports[`getHasManyRelation: ExplicitManyToManyPivot - A 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot - B 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot2 - explicit_many_to_many_a2 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot2 - explicit_many_to_many_b2 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot3 - A 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot3 - B 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot4 - A 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot4 - B 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot5 - A 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot5 - A2 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot5 - B 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot5 - B2 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot6 - A 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot6 - B 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot7 - A 1`] = `false`;

exports[`getHasManyRelation: ExplicitManyToManyPivot7 - B 1`] = `false`;

exports[`getHasManyRelation: ImplicitManyToManyA - related 1`] = `false`;

exports[`getHasManyRelation: ImplicitManyToManyB - related 1`] = `false`;

exports[`getHasManyRelation: OneToManyA - related 1`] = `
Array [
  Object {
    "className": "OneToManyB",
    "foreignKey": "relatedId",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyB",
  },
]
`;

exports[`getHasManyRelation: OneToManyA2 - related 1`] = `
Array [
  Object {
    "className": "OneToManyB2",
    "foreignKey": "one_to_many_a2_id",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyB2",
  },
]
`;

exports[`getHasManyRelation: OneToManyA3 - related 1`] = `
Array [
  Object {
    "className": "OneToManyB3",
    "foreignKey": "relatedId",
    "localKey": "otherId",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyB3",
  },
]
`;

exports[`getHasManyRelation: OneToManyA4 - related 1`] = `
Array [
  Object {
    "className": "OneToManyB4",
    "foreignKey": "main_id",
    "localKey": "main_id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyB4",
  },
]
`;

exports[`getHasManyRelation: OneToManyB - one_to_one_a2 1`] = `false`;

exports[`getHasManyRelation: OneToManyB2 - one_to_many_a2 1`] = `false`;

exports[`getHasManyRelation: OneToManyB3 - related 1`] = `false`;

exports[`getHasManyRelation: OneToManyB4 - related 1`] = `false`;

exports[`getHasManyRelation: OneToOneA - related 1`] = `false`;

exports[`getHasManyRelation: OneToOneA2 - related 1`] = `false`;

exports[`getHasManyRelation: OneToOneA3 - related 1`] = `false`;

exports[`getHasManyRelation: OneToOneA4 - related 1`] = `false`;

exports[`getHasManyRelation: OneToOneA5 - related 1`] = `false`;

exports[`getHasManyRelation: OneToOneB - related 1`] = `false`;

exports[`getHasManyRelation: OneToOneB2 - one_to_one_a2 1`] = `false`;

exports[`getHasManyRelation: OneToOneB3 - related 1`] = `false`;

exports[`getHasManyRelation: OneToOneB4 - related 1`] = `false`;

exports[`getHasManyRelation: OneToOneB5 - related 1`] = `false`;

exports[`getHasManyRelation: Post - author 1`] = `false`;

exports[`getHasManyRelation: Post - categories 1`] = `false`;

exports[`getHasManyRelation: Profile - user 1`] = `false`;

exports[`getHasManyRelation: SelfRelation - child 1`] = `false`;

exports[`getHasManyRelation: SelfRelation - parent 1`] = `false`;

exports[`getHasManyRelation: TouchingA - related 1`] = `false`;

exports[`getHasManyRelation: TouchingB - related 1`] = `false`;

exports[`getHasManyRelation: User - posts 1`] = `
Array [
  Object {
    "className": "Post",
    "foreignKey": "authorId",
    "localKey": "id",
    "name": "posts",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\Post",
  },
]
`;

exports[`getHasManyRelation: User - profile 1`] = `false`;

exports[`getHasOneRelation: Category - posts 1`] = `false`;

exports[`getHasOneRelation: EagerLoadA - related 1`] = `
Array [
  Object {
    "className": "EagerLoadB",
    "foreignKey": "relatedId",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\EagerLoadB",
  },
]
`;

exports[`getHasOneRelation: EagerLoadB - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyA - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyA2 - explicit_many_to_many_b2 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyA3 - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyA4 - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyA5 - hasOne 1`] = `
Array [
  Object {
    "className": "ExplicitManyToManyPivot5",
    "foreignKey": "A2_id",
    "localKey": "id",
    "name": "hasOne",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot5",
  },
]
`;

exports[`getHasOneRelation: ExplicitManyToManyA5 - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyA6 - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyA7 - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyB - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyB2 - explicit_many_to_many_a2 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyB3 - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyB4 - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyB5 - pivot 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyB5 - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyB6 - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyB7 - related 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot - A 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot - B 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot2 - explicit_many_to_many_a2 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot2 - explicit_many_to_many_b2 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot3 - A 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot3 - B 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot4 - A 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot4 - B 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot5 - A 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot5 - A2 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot5 - B 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot5 - B2 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot6 - A 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot6 - B 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot7 - A 1`] = `false`;

exports[`getHasOneRelation: ExplicitManyToManyPivot7 - B 1`] = `false`;

exports[`getHasOneRelation: ImplicitManyToManyA - related 1`] = `false`;

exports[`getHasOneRelation: ImplicitManyToManyB - related 1`] = `false`;

exports[`getHasOneRelation: OneToManyA - related 1`] = `false`;

exports[`getHasOneRelation: OneToManyA2 - related 1`] = `false`;

exports[`getHasOneRelation: OneToManyA3 - related 1`] = `false`;

exports[`getHasOneRelation: OneToManyA4 - related 1`] = `false`;

exports[`getHasOneRelation: OneToManyB - one_to_one_a2 1`] = `false`;

exports[`getHasOneRelation: OneToManyB2 - one_to_many_a2 1`] = `false`;

exports[`getHasOneRelation: OneToManyB3 - related 1`] = `false`;

exports[`getHasOneRelation: OneToManyB4 - related 1`] = `false`;

exports[`getHasOneRelation: OneToOneA - related 1`] = `
Array [
  Object {
    "className": "OneToOneB",
    "foreignKey": "relatedId",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneB",
  },
]
`;

exports[`getHasOneRelation: OneToOneA2 - related 1`] = `
Array [
  Object {
    "className": "OneToOneB2",
    "foreignKey": "one_to_one_a2_id",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneB2",
  },
]
`;

exports[`getHasOneRelation: OneToOneA3 - related 1`] = `
Array [
  Object {
    "className": "OneToOneB3",
    "foreignKey": "related_id",
    "localKey": "otherId",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneB3",
  },
]
`;

exports[`getHasOneRelation: OneToOneA4 - related 1`] = `
Array [
  Object {
    "className": "OneToOneB4",
    "foreignKey": "relatedId",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneB4",
  },
]
`;

exports[`getHasOneRelation: OneToOneA5 - related 1`] = `
Array [
  Object {
    "className": "OneToOneB5",
    "foreignKey": "relatedId",
    "localKey": "main_id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneB5",
  },
]
`;

exports[`getHasOneRelation: OneToOneB - related 1`] = `false`;

exports[`getHasOneRelation: OneToOneB2 - one_to_one_a2 1`] = `false`;

exports[`getHasOneRelation: OneToOneB3 - related 1`] = `false`;

exports[`getHasOneRelation: OneToOneB4 - related 1`] = `false`;

exports[`getHasOneRelation: OneToOneB5 - related 1`] = `false`;

exports[`getHasOneRelation: Post - author 1`] = `false`;

exports[`getHasOneRelation: Post - categories 1`] = `false`;

exports[`getHasOneRelation: Profile - user 1`] = `false`;

exports[`getHasOneRelation: SelfRelation - child 1`] = `
Array [
  Object {
    "className": "SelfRelation",
    "foreignKey": "relatedId",
    "localKey": "id",
    "name": "child",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\SelfRelation",
  },
]
`;

exports[`getHasOneRelation: SelfRelation - parent 1`] = `false`;

exports[`getHasOneRelation: TouchingA - related 1`] = `
Array [
  Object {
    "className": "TouchingB",
    "foreignKey": "relatedId",
    "localKey": "id",
    "name": "related",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\TouchingB",
  },
]
`;

exports[`getHasOneRelation: TouchingB - related 1`] = `false`;

exports[`getHasOneRelation: User - posts 1`] = `false`;

exports[`getHasOneRelation: User - profile 1`] = `
Array [
  Object {
    "className": "Profile",
    "foreignKey": "userId",
    "localKey": "id",
    "name": "profile",
  },
  Set {
    "App\\\\Models\\\\Prisma\\\\Profile",
  },
]
`;

exports[`getRelationsFromModel: Category 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "Post",
      "foreignPivotKey": "A",
      "name": "posts",
      "pivotTable": "_CategoryToPost",
      "relatedPivotKey": "B",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\Post",
  },
}
`;

exports[`getRelationsFromModel: DefaultValues 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: EagerLoadA 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [
    Object {
      "className": "EagerLoadB",
      "foreignKey": "relatedId",
      "localKey": "id",
      "name": "related",
    },
  ],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\EagerLoadB",
  },
}
`;

exports[`getRelationsFromModel: EagerLoadB 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "EagerLoadA",
      "foreignKey": "relatedId",
      "name": "related",
      "nullable": false,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\EagerLoadA",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyA 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyB",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot",
      "relatedKey": "id",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyA2 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyB2",
      "foreignPivotKey": "explicit_many_to_many_a2_id",
      "name": "explicit_many_to_many_b2",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot2",
      "relatedKey": "id",
      "relatedPivotKey": "explicit_many_to_many_b2_id",
      "using": "ExplicitManyToManyPivot2",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB2",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot2",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyA3 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyB3",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "otherIdA",
      "pivotTable": "ExplicitManyToManyPivot3",
      "relatedKey": "otherIdB",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot3",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB3",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot3",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyA4 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyB4",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "otherIdA",
      "pivotTable": "explicit_many_to_many_a4_explicit_many_to_many_b4",
      "relatedKey": "otherIdB",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot4",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB4",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot4",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyA5 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyB5",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot5",
      "relatedKey": "id",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot5",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [
    Object {
      "className": "ExplicitManyToManyPivot5",
      "foreignKey": "A2_id",
      "localKey": "id",
      "name": "hasOne",
    },
  ],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB5",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot5",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyA6 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyB6",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "key",
      "pivotTable": "ExplicitManyToManyPivot6",
      "relatedKey": "key",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot6",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB6",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot6",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyA7 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyB7",
      "foreignPivotKey": "A_id",
      "name": "related",
      "parentKey": "key",
      "pivotTable": "ExplicitManyToManyPivot7",
      "relatedKey": "key",
      "relatedPivotKey": "B_id",
      "using": "ExplicitManyToManyPivot7",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyB7",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot7",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyB 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyA",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot",
      "relatedKey": "id",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyB2 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyA2",
      "foreignPivotKey": "explicit_many_to_many_b2_id",
      "name": "explicit_many_to_many_a2",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot2",
      "relatedKey": "id",
      "relatedPivotKey": "explicit_many_to_many_a2_id",
      "using": "ExplicitManyToManyPivot2",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA2",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot2",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyB3 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyA3",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "otherIdB",
      "pivotTable": "ExplicitManyToManyPivot3",
      "relatedKey": "otherIdA",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot3",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA3",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot3",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyB4 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyA4",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "otherIdB",
      "pivotTable": "explicit_many_to_many_a4_explicit_many_to_many_b4",
      "relatedKey": "otherIdA",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot4",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA4",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot4",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyB5 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "ExplicitManyToManyPivot5",
      "foreignKey": "pivot_id",
      "name": "pivot",
      "nullable": false,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyA5",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "id",
      "pivotTable": "ExplicitManyToManyPivot5",
      "relatedKey": "id",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot5",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA5",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot5",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyB6 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyA6",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "key",
      "pivotTable": "ExplicitManyToManyPivot6",
      "relatedKey": "key",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot6",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA6",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot6",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyB7 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ExplicitManyToManyA7",
      "foreignPivotKey": "B_id",
      "name": "related",
      "parentKey": "key",
      "pivotTable": "ExplicitManyToManyPivot7",
      "relatedKey": "key",
      "relatedPivotKey": "A_id",
      "using": "ExplicitManyToManyPivot7",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyA7",
    "App\\\\Models\\\\Prisma\\\\ExplicitManyToManyPivot7",
  },
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyPivot 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyPivot2 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyPivot3 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyPivot4 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyPivot5 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyPivot6 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: ExplicitManyToManyPivot7 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: FieldComments 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: FieldMultipleComments 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Fillable 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Guarded 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Hidden 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Ignore 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: ImplicitManyToManyA 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ImplicitManyToManyB",
      "foreignPivotKey": "A",
      "name": "related",
      "pivotTable": "_ImplicitManyToManyAToImplicitManyToManyB",
      "relatedPivotKey": "B",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ImplicitManyToManyB",
  },
}
`;

exports[`getRelationsFromModel: ImplicitManyToManyB 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [
    Object {
      "className": "ImplicitManyToManyA",
      "foreignPivotKey": "B",
      "name": "related",
      "pivotTable": "_ImplicitManyToManyAToImplicitManyToManyB",
      "relatedPivotKey": "A",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\ImplicitManyToManyA",
  },
}
`;

exports[`getRelationsFromModel: MappedId 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: MassAssignable 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: ModelComments 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: ModelMultipleComments 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: MultipleComments 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: MultipleUnique 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: MultipleUnique2 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: NoPrimaryKey 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: NoRules 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: NullableField 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: OneToManyA 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [
    Object {
      "className": "OneToManyB",
      "foreignKey": "relatedId",
      "localKey": "id",
      "name": "related",
    },
  ],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyB",
  },
}
`;

exports[`getRelationsFromModel: OneToManyA2 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [
    Object {
      "className": "OneToManyB2",
      "foreignKey": "one_to_many_a2_id",
      "localKey": "id",
      "name": "related",
    },
  ],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyB2",
  },
}
`;

exports[`getRelationsFromModel: OneToManyA3 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [
    Object {
      "className": "OneToManyB3",
      "foreignKey": "relatedId",
      "localKey": "otherId",
      "name": "related",
    },
  ],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyB3",
  },
}
`;

exports[`getRelationsFromModel: OneToManyA4 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [
    Object {
      "className": "OneToManyB4",
      "foreignKey": "main_id",
      "localKey": "main_id",
      "name": "related",
    },
  ],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyB4",
  },
}
`;

exports[`getRelationsFromModel: OneToManyB 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "OneToManyA",
      "foreignKey": "relatedId",
      "name": "one_to_one_a2",
      "nullable": false,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyA",
  },
}
`;

exports[`getRelationsFromModel: OneToManyB2 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "OneToManyA2",
      "foreignKey": "one_to_many_a2_id",
      "name": "one_to_many_a2",
      "nullable": false,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyA2",
  },
}
`;

exports[`getRelationsFromModel: OneToManyB3 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "OneToManyA3",
      "foreignKey": "relatedId",
      "name": "related",
      "nullable": false,
      "ownerKey": "otherId",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyA3",
  },
}
`;

exports[`getRelationsFromModel: OneToManyB4 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "OneToManyA4",
      "foreignKey": "main_id",
      "name": "related",
      "nullable": false,
      "ownerKey": "main_id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToManyA4",
  },
}
`;

exports[`getRelationsFromModel: OneToOneA 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [
    Object {
      "className": "OneToOneB",
      "foreignKey": "relatedId",
      "localKey": "id",
      "name": "related",
    },
  ],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneB",
  },
}
`;

exports[`getRelationsFromModel: OneToOneA2 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [
    Object {
      "className": "OneToOneB2",
      "foreignKey": "one_to_one_a2_id",
      "localKey": "id",
      "name": "related",
    },
  ],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneB2",
  },
}
`;

exports[`getRelationsFromModel: OneToOneA3 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [
    Object {
      "className": "OneToOneB3",
      "foreignKey": "related_id",
      "localKey": "otherId",
      "name": "related",
    },
  ],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneB3",
  },
}
`;

exports[`getRelationsFromModel: OneToOneA4 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [
    Object {
      "className": "OneToOneB4",
      "foreignKey": "relatedId",
      "localKey": "id",
      "name": "related",
    },
  ],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneB4",
  },
}
`;

exports[`getRelationsFromModel: OneToOneA5 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [
    Object {
      "className": "OneToOneB5",
      "foreignKey": "relatedId",
      "localKey": "main_id",
      "name": "related",
    },
  ],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneB5",
  },
}
`;

exports[`getRelationsFromModel: OneToOneB 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "OneToOneA",
      "foreignKey": "relatedId",
      "name": "related",
      "nullable": false,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneA",
  },
}
`;

exports[`getRelationsFromModel: OneToOneB2 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "OneToOneA2",
      "foreignKey": "one_to_one_a2_id",
      "name": "one_to_one_a2",
      "nullable": false,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneA2",
  },
}
`;

exports[`getRelationsFromModel: OneToOneB3 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "OneToOneA3",
      "foreignKey": "related_id",
      "name": "related",
      "nullable": false,
      "ownerKey": "otherId",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneA3",
  },
}
`;

exports[`getRelationsFromModel: OneToOneB4 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "OneToOneA4",
      "foreignKey": "relatedId",
      "name": "related",
      "nullable": true,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneA4",
  },
}
`;

exports[`getRelationsFromModel: OneToOneB5 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "OneToOneA5",
      "foreignKey": "relatedId",
      "name": "related",
      "nullable": true,
      "ownerKey": "main_id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\OneToOneA5",
  },
}
`;

exports[`getRelationsFromModel: Post 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "User",
      "foreignKey": "authorId",
      "name": "author",
      "nullable": false,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [
    Object {
      "className": "Category",
      "foreignPivotKey": "B",
      "name": "categories",
      "pivotTable": "_CategoryToPost",
      "relatedPivotKey": "A",
    },
  ],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\User",
    "App\\\\Models\\\\Prisma\\\\Category",
  },
}
`;

exports[`getRelationsFromModel: Profile 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "User",
      "foreignKey": "userId",
      "name": "user",
      "nullable": false,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\User",
  },
}
`;

exports[`getRelationsFromModel: ReadOnlyField 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: SelfRelation 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "SelfRelation",
      "foreignKey": "relatedId",
      "name": "parent",
      "nullable": false,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [
    Object {
      "className": "SelfRelation",
      "foreignKey": "relatedId",
      "localKey": "id",
      "name": "child",
    },
  ],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\SelfRelation",
  },
}
`;

exports[`getRelationsFromModel: SoftDelete1 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: SoftDelete2 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Timestamps1 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Timestamps2 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Timestamps3 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Timestamps4 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Timestamps5 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Timestamps6 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Timestamps7 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Timestamps8 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: TouchingA 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [
    Object {
      "className": "TouchingB",
      "foreignKey": "relatedId",
      "localKey": "id",
      "name": "related",
    },
  ],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\TouchingB",
  },
}
`;

exports[`getRelationsFromModel: TouchingB 1`] = `
Object {
  "belongsTo": Array [
    Object {
      "className": "TouchingA",
      "foreignKey": "relatedId",
      "name": "related",
      "nullable": false,
      "ownerKey": "id",
    },
  ],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\TouchingA",
  },
}
`;

exports[`getRelationsFromModel: Types 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: Unique 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: UnsupportedTypes 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: User 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [
    Object {
      "className": "Post",
      "foreignKey": "authorId",
      "localKey": "id",
      "name": "posts",
    },
  ],
  "hasOne": Array [
    Object {
      "className": "Profile",
      "foreignKey": "userId",
      "localKey": "id",
      "name": "profile",
    },
  ],
  "imports": Set {
    "App\\\\Models\\\\Prisma\\\\Post",
    "App\\\\Models\\\\Prisma\\\\Profile",
  },
}
`;

exports[`getRelationsFromModel: Visible 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithArray 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithBackedEnum 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithDbType 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithEnum 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithGlobalPrimaryKey 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithGlobalPrimaryKeyDifferentName 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithGlobalStringPrimaryKey 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithGlobalStringPrimaryKeyDifferentName 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithPrimaryKey 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithPrimaryKeyDifferentName 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithStringPrimaryKey 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithStringPrimaryKeyDifferentName 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;

exports[`getRelationsFromModel: WithTableMap 1`] = `
Object {
  "belongsTo": Array [],
  "belongsToMany": Array [],
  "hasMany": Array [],
  "hasOne": Array [],
  "imports": Set {},
}
`;
